--- a/Organo/src/componentes/Banner/Banner.css
+++ b/Organo/src/componentes/Banner/Banner.css
@@ -1,16 +1,21 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-.banner {
-    width: 100%;
-    overflow: hidden;
+    box-sizing: border-box; /* Garante que a largura e altura incluam o preenchimento e a borda */
+  }
+  
+  .banner {
+    position: fixed; /* Fixa a posição da div banner */
+    top: 0; /* Ajusta a div banner para o topo */
+    left: 0; /* Ajusta a div banner para a esquerda */
+    width: 100%; /* Faz a div banner ocupar toda a largura */
     background-color: #6278f7;
-}
-
-.banner-image {
-    width: 100%;
-    height: auto; 
-    display: block;
-}
+    text-align: center;
+    z-index: 9999; /* Define um índice z alto para garantir que a div banner esteja acima de todo o conteúdo */
+  }
+  
+  .banner img {
+    width: 100%; /* Faz a imagem ocupar toda a largura da div banner */
+    display: block; /* Garante que a imagem não tenha espaçamento indesejado abaixo */
+  }
+  
